# AE-lyrics

./: LyricMaker.jsx  README.md  app.py  pyproject.toml
src/lyrics_sync/: __init__.py  alignment.py  audio_transcriber.py  cli.py  report.py  srt_writer.py  text_normalizer.py
