[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ae-lyrics-sync"
version = "0.1.0"
description = "Automatic lyrics-to-audio alignment and SRT export"
authors = [
  { name = "AE Lyrics Team" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "faster-whisper>=0.10.0",
  "numpy>=1.24",
  "soundfile>=0.12",
]
license = { text = "MIT" }

[project.scripts]
ae-lyrics-sync = "lyrics_sync.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
